2002-05-05 MINAMI Hirokazu <minami@chem.s.u-tokyo.ac.jp>

	* dithering support for PseudoColor (src/ml_picture_gdk.c). 

2002-05-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* Added a mechanism to find the closest color when visual class is
	  PseudoColor or GrayScale. (src/ml_color.c)

2002-05-02 Seiichi SATO <ssato@sh.rim.or.jp>

	* Fixed segfault when destroying a scrollbar in PseudoColor visual.
	  (Thanks to Minami Hirokazu san)

2002-05-01 Tomohiro KUBOTA <kutoba@debian.org>

	* manpage update: termcap file and -y option.

2002-04-30 Araki Ken <arakiken@users.sf.net>

	* etc/termcap format is changed and it is possible to define entries for
	  multiple terminals.
	* ut field(a.k.a bce in terminfo) is added to etc/termcap and --bce option
	  is removed.
	* -ldl is linked to libkik.so.

2002-04-29 MINAMI Hirokazu <minami@chem.s.u-tokyo.ac.jp>

	* Added documentations for background picture processing.
	  (doc/*/README.picdep)

2002-04-28 Tomohiro KUBOTA <kubota@debian.org>

	* Fixed several typos in the manpage.
	* Explanation on "-1" command option in more detail in the manpage.

2002-04-28 Araki Ken <arakiken@users.sf.net>

	* underline can be left as garbage on screen if line space is 
	  odd number(1,3,5...). fixed.
	* configure fails with --with-libtool option. fixed.
	  (Thanks to Nakada Nobuyoshi san)

2002-04-27 Araki Ken <arakiken@users.sf.net>

	* kik_utmp_sysv.c patch is merged.
	  (Thanks to Nadim Shaikli)

2002-04-27 Araki Ken <arakiken@users.sf.net>

	* ml_term_model_t is dynamically plugged in ml_term_screen_t from outside,
	  instead of being internally created.
	* ml_sb_view_factory manages reference counter of each library so as not
	  to unload a library which is used by other terminals.
	  (Thanks to Sato Seiichi san)

2002-04-27 Araki Ken <arakiken@users.sf.net>

	* -3,--bce,use_bce=(true|false) option which enables or disables BCE support
	  is added.

2002-04-26 Seiichi SATO <ssato@sh.rim.or.jp>
